# cpp-project

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
AProject/: CMakeLists.txt
AProject/doc/: CMakeLists.txt  config.doxygen.in
AProject/src/: CMakeLists.txt
AProject/src/app/: main.cpp
AProject/test/: CMakeLists.txt  test-AClass.cpp
AnotherProject/: CMakeLists.txt
AnotherProject/src/: AnotherClass.cpp  AnotherClass.h
AnotherProject/src/app/: main.cpp
AnotherProject/test/: test-AnotherClass.cpp
projects/: CMakeLists.txt
projects/MyCinderProject/: CMakeLists.txt
projects/MyCinderProject/src/: AClass.cpp  AClass.h
projects/MyCinderProject/src/app/: Resources.h  main.cpp
projects/MyCinderProject/test/: CMakeLists.txt
scripts/: install-dependencies.sh
